--- a/backend_deposit/templates/deposit/birpay_orders.html
+++ b/backend_deposit/templates/deposit/birpay_orders.html
@@ -75,6 +75,7 @@
                     <th>User</th>
                     <th>Customer Name</th>
                     <th>Operator</th>
+                    <th>Подтв</th>
                     <th>Чек</th>
                     <th>Raw Data</th>
                     <th>GPT Data</th>
@@ -93,7 +94,7 @@
             {% for order in page_obj %}
                 <tr>
                     <td>
-                        {{ order.incoming}} {{ order.incoming.id|default_if_none:"" }} {{ order.incoming.pay|default_if_none:"" }}
+                        {{ order.incoming.id|default_if_none:"" }} {{ order.incoming.pay|default_if_none:"" }}
                     </td>
                     <td>{{ order.delta|default_if_none:"" }}</td>
                     <td {% if order.check_is_double %} style="background: red" {% endif %}>{{ order.merchant_transaction_id }}</td>
@@ -111,6 +112,7 @@
                     </td>
                     <td>{{ order.customer_name }}</td>
                     <td>{{ order.operator|default_if_none:"" }}</td>
+                    <td>{{ order.confirmed_operator|default_if_none:"" }}</td>
                     <td>
                         {% if order.check_file %}
                             <a href="{{ order.check_file.url }}" target="_blank">Чек</a>
