--- a/backend_deposit/templates/deposit/birpay_orders.html
+++ b/backend_deposit/templates/deposit/birpay_orders.html
@@ -105,7 +105,9 @@
                     <td>{{ order.card_number }}</td>
                     <td>
                         {% if order.is_moshennik%}
-                            <span style="background: red">{{ order.merchant_user_id }}</span>
+                            <span style="background: rgba(120,48,255,0.64)">{{ order.merchant_user_id }}</span>
+                        {% elif order.is_painter %}
+                            <span style="background: rgba(48,255,238,0.64)">{{ order.merchant_user_id }}</span>
                         {% else %}
                             {{ order.merchant_user_id }}
                         {% endif %}
