--- a/backend_deposit/templates/includes/operator_menu.html
+++ b/backend_deposit/templates/includes/operator_menu.html
@@ -25,6 +25,7 @@
             <li><a class="dropdown-item" href="{% url 'deposit:moshennik_list' %}">Список мошенников</a></li>
             <li><a class="dropdown-item" href="{% url 'deposit:painter_list' %}">Список рисовальщиков</a></li>
             <li><a class="dropdown-item" href="{% url 'deposit:users_stat' %}">Список юзеров</a></li>
+            <li><a class="dropdown-item" href="{% url 'deposit:operator_speed_graph' %}">Скорость операторов</a></li>
           </ul>
         </li>
       </ul>
