--- a/backend_deposit/templates/deposit/trash_list.html
+++ b/backend_deposit/templates/deposit/trash_list.html
@@ -26,7 +26,7 @@
                 <tr class="text-start">
                   <td>{{ obj.pk }}</td>
                   <td>{{ obj.register_date }}</td>
-                  <td>{{ obj.formatted_text }}</td>
+                  <td>{{ obj.formated_message }}</td>
                 </tr>
               {% endfor %}
           </tbody>
