--- a/backend_deposit/templates/deposit/birpay_orders.html
+++ b/backend_deposit/templates/deposit/birpay_orders.html
@@ -51,8 +51,8 @@
             <td>{{ birpay_stats.status_1 }}</td>
             <td><b>Статус 2</b></td>
             <td>{{ birpay_stats.status_2 }}</td>
-            <td><b>GPT%</b></td>
-            <td>{{ birpay_stats.gpt_approve }}</td>
+            <td><b>GPT% (7 флагов)</b></td>
+            <td title="Процент заказов с полной GPT валидацией: время, получатель, сумма, СМС, статус, ≥5 заказов, ≥40% репутация">{{ birpay_stats.gpt_approve }}</td>
         </tr>
     </tbody>
 </table>
@@ -81,7 +81,7 @@
                     <th>Raw Data</th>
                     <th>GPT Data</th>
                     <th>
-                        <span title="Время | карта | сумма | смс одна | подтвердил бы">GPT res</span>
+                        <span title="Время | Получатель | Сумма | СМС одна | GPT статус | ≥5 заказов | ≥40% репутация (127=авто)">GPT res</span>
                         {% if gpt_auto_approve %}
                             <a href="{% url 'users:toggle_option' 'gpt_auto_approve' %}">🟢</a>
                         {% else %}
