--- a/backend_deposit/templates/includes/switcher2.html
+++ b/backend_deposit/templates/includes/switcher2.html
@@ -20,6 +20,14 @@
 
       <li class="nav-item">
         <a 
+           class="nav-link {% if view_name == 'deposit:incoming_my_filter' %}active{% endif %}"
+           href="{% url 'deposit:incoming_my_filter' %}">
+          Мой фильтр
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a 
            class="nav-link {% if view_name == 'deposit:incomings_filter' %}active{% endif %}"
            href="{% url 'deposit:incomings_filter' %}">
           Платежи по фильтру
